--- a/data/Ipotesi/Regole.tex
+++ b/data/Ipotesi/Regole.tex
@@ -98,13 +98,41 @@ Questo tipo di assenza andrebbe discussa con più attenzione e soprattutto anche
 
 \section{Regole opzionali}
 
-\DndDropCapLine{Q}{}ueste regole...
+\DndDropCapLine{Q}{}ueste regole sono quelle che deviano o si aggiungono alle regole (o banalmente riporto da un manuale reinterpretate) di D\&D e che preferisco utilizzare nelle mie campagne.
+
+\subsection{Realismo stronzo}
+
+La quinta edizione di D\&D non è bilanciata intorno all'idea di una battaglia per riposo lungo, i personaggi hanno semplicemente troppe opzioni e si finisce per trascurare l'importante fattore di gestione delle risorse che giustifica la minore versatilità dei combattenti rispetto agli incantatori, ma allo stesso tempo giocare qualcosa come 5 o 6 incontri al giorno può risultare estenuante. Per questo io preferisco implementare la regola del \textit{Realismo Crudo}: un riposo breve richiede 8 ore e un riposo lungo richiede una settimana.
 
 \subsection{Dadi esplosivi}
 
 Un dado esplosivo è un dado che viene ritirato ogni volta che il suo risultato è pari al massimo del dado e alla fine del processo restituisce la somma delle iterazioni. \\ Ad esempio, un d4 esplosivo potrebbe restituire come serie di risultati 4, 4 e 2, quindi il risultato del tiro sarebbe 4+4+2=10.
 
-\subsection{Automulticlasse}
+\subsection{Endomulticlasse}
 
-Come ammetto la multiclasse, ammetto anche che un personaggio multiclassi nella sua stessa classe, magari per ricevere i privilegi di diverse sottoclassi! Al fine di conteggiare i suoi privilegi limitati tuttavia questi vanno conteggiati separatamente e secondo il livello della classe che glieli garantisce. \\ Ad esempio un Monaco di livello 10/10 potrà ridurre al massimo di 50 punti ferita il suo danno da caduta usando una reazione, mentre un Warlock di livello 11/11 avrà due utilizzi dell'Arcanum Mistico ma entrambi limitati al 6° livello. \\ Ogni ambiguità va sottoposta al giudizio del DM, ovviamente.
+Come ammetto la multiclasse, ammetto anche che un personaggio multiclassi nella sua stessa classe, magari per ricevere i privilegi di diverse sottoclassi! Al fine di conteggiare i suoi privilegi limitati tuttavia questi vanno conteggiati separatamente e secondo il livello della classe che glieli garantisce. \\ Ad esempio un Monaco/Monaco di livello 10/10 potrà ridurre al massimo di 50 punti ferita il suo danno da caduta usando una reazione, mentre un Warlock/Warlock di livello 11/11 avrà due utilizzi dell'Arcanum Mistico ma entrambi limitati al 6° livello. \\ Ogni ambiguità va sottoposta al giudizio del DM, ovviamente.
 
+\subsection{Multiclasse alternativa}
+
+Non amo molto il sistema di multiclasse secondo il quale finchè prendi livelli in altri incantatori puri puoi avere la normale progressione degli slot. Per quanto mi riguarda, multiclassando in diverse classi da incantatore si ottengono gli stessi slot che si otterrebbero con le altre classi e si sommano ai propri. Ad esempio un Mago/Chierico 6/5 non avrà slot di 6° livello, ma ne avrà 3+2 slot di 3° livello. Allo stesso modo, un combattente che multiclassa in un incantatore non riceve metà degli slot che riceverebbe normalmente ma li riceve tutti.
+
+\subsection{Danni non letali}
+
+Non mi importa molto della logica, ogni personaggio può decidere di infliggere danni non letali con qualsiasi sorgente... a meno di spiacevoli incidenti... \textit{risata malvagia}. \\ Ogni volta che un personaggio decide di colpire con danni non letali deve tirare un d100. Se fa meno dei danni che ha causato con quell'attacco, i suoi danni sono comunque considerati letali. \\ Se un personaggio non è in grado di infliggere danni letali o non letali per via di un'altra regola (ad esempio il Monaco dell'Ombra Redenta), quella bypassa il tiro.
+
+\subsection{Punti Follia}
+
+Non sempre nelle campagne di D\&D si bada alla salute mentale dei personaggi, ma non è questo il caso nel mio mondo! Dopo aver vissuto esperienze disturbanti, il DM può premiare i vostri personaggi con dei fantastici punti Follia, in base all'esperienza!
+
+\begin{DndTable}[header=Effetti della Follia]{XX}
+    Punteggio & Effetto \\
+    1-4 & Svantaggio alle prove basate su caratteristiche mentali e ai tiri salvezza contro gli incantesimi\\
+    5-9 & Paura di creature, luoghi e oggetti casuali o determinati dal DM\\
+    10-19 & Svantaggio a tutti i tiri salvezza, tiri per colpire e prove di caratteristica\\
+    20-34 & Ogni ora va superato un tiro salvezza su Saggezza con CD 12 o si è colpiti da pazzia a breve termine per 1d10 minuti\\
+    35-49 & Paralisi mentale, se non viene curata la Follia dopo 1d4 giorni arriva a 50 punti automaticamente\\
+    50+ & Pazzia permanente, il personaggio cade sotto il controllo del DM e il giocatore deve usare un nuovo personaggio\\
+\end{DndTable}
+
+\paragraph{Curare la Follia}
+Un riposo breve o mangiare una bacca di \textit{Bacche Benefiche} (al massimo una per riposo breve) cura 1 punto Follia, un riposo lungo ne cura 3, \textit{Ristorare Inferiore} ne cura 5 e \textit{Ristorare Superiore} porta al limite superiore del livello precedente, \textit{Parola del Potere Guarire} cura tutti i punti Follia a meno che non siano 50 o più e l'effetto di \textit{Desiderio} può riportare alla normalità qualunque livello di Follia.
