--- a/data/Personaggi/Oggetti.tex
+++ b/data/Personaggi/Oggetti.tex
@@ -5,27 +5,27 @@
 
 \textit{Artefatto meraviglioso leggendario, richiede sintonia con un Incantatore che stia venendo divorato dalla magia. \\ Questo oggetto è un estratto dalla Biblioteca Omnicomprensiva di Ker.}
 
-\DndDropCapLine{D}{}urante le sue ricerche per scoprire quanto più possibile sulla magia, il mago Ælinor Könungru si è imbattuto in un incantesimo estremamente antico e potente, che appena lanciato ha cominciato a consumarne il corpo. Per fortuna è riuscito a contenerlo e ad isolarlo nel proprio braccio grazie al potere dell'Anello Protettore di Sophos il Savio. L'incantesimo non è tuttavia sparito, e i suoi segni sono rimasti impressi sulla pelle del mago.
+% \DndDropCapLine{D}{}urante le sue ricerche per scoprire quanto più possibile sulla magia, il mago Ælinor Könungru si è imbattuto in un incantesimo estremamente antico e potente, che appena lanciato ha cominciato a consumarne il corpo. Per fortuna è riuscito a contenerlo e ad isolarlo nel proprio braccio grazie al potere dell'Anello Protettore di Sophos il Savio. L'incantesimo non è tuttavia sparito, e i suoi segni sono rimasti impressi sulla pelle del mago.
 
-\begin{DndReadAloud}
-  \it
-  L'Anello Protettore di Sophos il Savio permette a chi lo indossa di attingere ad una fonte di antica energia racchiusa nella sua gemma, che reagisce con alcuni tipi di incantesimi protettivi alimentandoli senza richiedere energia all'incantatore.
-\end{DndReadAloud}
+% \begin{DndReadAloud}
+%   \it
+%   L'Anello Protettore di Sophos il Savio permette a chi lo indossa di attingere ad una fonte di antica energia racchiusa nella sua gemma, che reagisce con alcuni tipi di incantesimi protettivi alimentandoli senza richiedere energia all'incantatore.
+% \end{DndReadAloud}
 
-\subsection{Potere passivo}
-L'anello può sostenere la concentrazione necessaria al mantenimento dell'incantesimo \textit{Limita Magie}. 
+% \subsection{Potere passivo}
+% L'anello può sostenere la concentrazione necessaria al mantenimento dell'incantesimo \textit{Limita Magie}. 
 
-\subsection{Potere Attivo}
-\textit{Requisito: 4 livelli in sintonia con l'anello.}\\
-Un numero di volte pari al proprio bonus di competenza per riposo lungo, l'incantatore che usa l'anello può lanciare l'incantesimo \textit{scudo} senza consumare slot.
+% \subsection{Potere Attivo}
+% \textit{Requisito: 4 livelli in sintonia con l'anello.}\\
+% Un numero di volte pari al proprio bonus di competenza per riposo lungo, l'incantatore che usa l'anello può lanciare l'incantesimo \textit{scudo} senza consumare slot.
 
-\subsection{Coscienza}
-\textit{Requisito: 12 livelli in sintonia con l'anello.}\\
-L'anello è considerato senziente, la sua personalità è simile a quella di Sophos il Savio ma non ne possiede i ricordi o le conoscenze.
+% \subsection{Coscienza}
+% \textit{Requisito: 12 livelli in sintonia con l'anello.}\\
+% L'anello è considerato senziente, la sua personalità è simile a quella di Sophos il Savio ma non ne possiede i ricordi o le conoscenze.
 
-\subsection{Corruzione mortale}
-\textit{Requisito: 12 livelli in sintonia con l'anello.}\\
-Una volta per riposo lungo, l'Incantatore può usare la sua reazione per spostare l'incantesimo \textit{Limita Magia} dal suo corpo ad un punto esterno. Fare questo tuttavia libera l'incantesimo nel suo corpo, il quale finché la bolla non viene ripristinata subisce 1d6+2 danni necrotici ogni volta che lancia un incantesimo e 1d4 danni necrotici ogni turno. Se l'incantatore mantiene un'altra concentrazione, ogni turno deve passare un TS su costituzione con CD pari alla propria CD del tiro salvezza contro gli incantesimi, altrimenti la perde. Se l'incantatore muore per questi danni, si trasforma in un divorato.
+% \subsection{Corruzione mortale}
+% \textit{Requisito: 12 livelli in sintonia con l'anello.}\\
+% Una volta per riposo lungo, l'Incantatore può usare la sua reazione per spostare l'incantesimo \textit{Limita Magia} dal suo corpo ad un punto esterno. Fare questo tuttavia libera l'incantesimo nel suo corpo, il quale finché la bolla non viene ripristinata subisce 1d6+2 danni necrotici ogni volta che lancia un incantesimo e 1d4 danni necrotici ogni turno. Se l'incantatore mantiene un'altra concentrazione, ogni turno deve passare un TS su costituzione con CD pari alla propria CD del tiro salvezza contro gli incantesimi, altrimenti la perde. Se l'incantatore muore per questi danni, si trasforma in un divorato.
 
 \section{STOCCO DI SARZEE}
 
@@ -35,3 +35,38 @@ Una volta per riposo lungo, l'Incantatore può usare la sua reazione per spostar
 
 \textit{Artefatto meraviglioso leggendario, richiede sintonia con un Warlock}
 
+\section{Oggetti Minori}
+
+\DndDropCapLine{N}{}on tutti gli oggetti magici devono essere artefatti leggendari e meravigliosi, ogni tanto è bello inventarsi qualche oggettino simpatico da aggiungere per qualche evento inaspettato nelle avventure!
+
+\subsection{Guanti del CleptoMana}
+\textit{Richiede sintonia con un Warlock} 
+
+\subsubsection{Un regalo da molto lontano... ma in che direzione?}
+Osservando questi guanti, è normale chiedersi da dove vengano: la loro fattura è inusuale, precisa, come se fossero stati costruiti con attrezzi perduti... o non ancora inventati? \\
+Un oggetto bizzarro, pensando al suo potere sembra strano che non ci siano leggende al riguardo, ma di certo l'incantatore in suo possesso ha tutte le carte giuste per scriversene una sua…
+
+\subsubsection{Ladro di Magia}
+Un numero di volte pari al suo bonus di competenza per riposo lungo, l'incantatore può scegliere una creatura che egli sia in grado di vedere e usare la sua azione per tentare utilizzare uno slot incantesimo del bersaglio di 5° livello o inferiore. \\
+Quando lo fa, come parte della stessa azione lancia un trucchetto a partire dalla posizione del bersaglio. L'incantatore deve essere in grado di vedere il bersaglio del suo trucchetto. Il trucchetto è considerato lanciato dall'incantatore con la sua caratteristica da incantatore. \\ Se il bersaglio non possiede slot di 5° livello o inferiore, i guanti non hanno alcun effetto e sia l'azione che l'utilizzo sono considerati utilizzati.
+
+\subsubsection{Controincantesimo}
+Un numero di volte pari a metà del suo bonus di competenza per riposo lungo, l'incantatore può lanciare l'incantesimo \textit{Controincantesimo} come incantesimo di 5° livello senza spendere slot incantesimo. \\ Come parte della stessa reazione, può lanciare un trucchetto a partire dalla posizione del bersaglio (vedi \textit{Ladro di Magia}).
+
+\subsubsection{Pura Cleptoman(i)a}
+Una volta per riposo lungo, l'incantatore può scegliere un altro incantatore che sia in grado di vedere e impadronirsi di un suo slot di 6° livello o superiore, convertendolo in uno slot di 5° livello. \\ Se il bersaglio non possiede slot di 6° livello o superiore, i guanti non hanno alcun effetto e sia l'azione che l'utilizzo sono considerati utilizzati.
+
+\subsection{Occhi di Omatara}
+\textit{Coppia di anelli che richiedono sintonia con due incantatori diversi contemporaneamente}
+
+\subsubsection{Sotto lo sguardo della morte}
+Anelli magici leggendari, la cui favola narra siano stati concessi da Omatara, dea della morte, a due incantatori fratelli che riuscirono a ingannarla. \\ Sempre secondo la leggenda, se un incantatore solo dovesse indossarli entrambi, Omatara in persona si preoccuperebbe di provvedere a dargli una morte rapida e fatidica, ma si tratta solo di una leggenda… vero? 
+
+\subsubsection{L'occhio sinistro}
+Come azione bonus, l'indossatore può scegliere una creatura senziente che sia in grado di vedere. \\ Per i prossimi 6 secondi, l'indossatore può percepire il mondo dagli occhi di quella creatura e controllarne lo sguardo. La creatura deve effettuare un TS su saggezza con CD 16; se lo fallisce, è accecata durante l'effetto di questo oggetto; L'incantatore può decidere di usare questo effetto senza accecare. \\ Questo privilegio può essere usato un numero di volte pari al bonus di competenza dell'indossatore per riposo breve. La creatura influenzata non può sapere da chi sta venendo influenzata.
+
+\subsubsection{L'occhio destro}
+Come azione, l'indossatore può toccare due volte l'anello e teletrasportarsi nell'ombra di una creatura senziente che possa vedere, potendo effettuare un attacco a mani nude. \\ Questo privilegio può essere usato un numero di volte pari al bonus di competenza dell'indossatore per riposo breve.
+
+\subsubsection{Stereoscopia}
+Se i due anelli sono indossati da persone diverse, come azione l'indossatore dell'occhio destro può girare l'anello sul dito e percepire il mondo dalla prospettiva dell'indossatore dell'occhio sinistro, non importa dove esso si trovi. A sua volta, l'indossatore dell'occhio sinistro può usare la sua azione per teletrasportarsi nell'ombra dell'indossatore dell'occhio destro. \\ Usare questo privilegio conta come un utilizzo. Se uno dei due anelli sta venendo utilizzato, l'altro indossatore ne è a conoscenza.
