--- a/data/Personaggi/Mago.tex
+++ b/data/Personaggi/Mago.tex
@@ -5,3 +5,22 @@
 \subsection{Controcanto della Lama}
 
 Dal 6° livello un Cantore della Lama, quando un nemico fallisce un attacco da mischia contro di lui, può usare la sua reazione per contrattaccare con la propria arma senza aggiungere il modificatore di caratteristica al danno. È comunque necessario il tiro per colpire.
+
+\section{Il Criminale di Guerra}
+
+\begin{DndReadAloud}
+    \it
+    Mi piace l'odore del napalm al mattino. Una volta abbiamo bombardato una collina, per dodici ore, e finita l'azione siamo andati a vedere. Non c'era più neanche l'ombra di quegli sporchi bastardi. Ma quell'odore... sai quell'odore di benzina? Tutto intorno. Profumava come... come di vittoria.\\ (Apocalypse Now, 1979)
+\end{DndReadAloud}
+
+\subsection{livello 2}
+A partire dal 2° livello;
+
+\subsection{livello 6}
+A partire dal 6° livello;
+
+\subsection{Bombardamento a Tappeto}
+A partire dal 10° livello, prima di lanciare un incantesimo a distanza con un'area d'effetto circolare, il Mago può usare la sua azione bonus per chiamare un bombardamento a tappeto. Una volta che lo fa, lancia l'incantesimo e questo viene lanciato 2d6 volte in punti casuali determinati dal DM.\\ Una volta che questo privilegio è stato utilizzato, non può più essere utilizzato fino al prossimo riposo lungo.
+
+\subsection{Cupola di Ferro}
+A partire dal 14° livello, una volta per riposo lungo, il Mago può usare la sua azione per spendere uno slot di 5° livello o superiore ed entrare in concentrazione e azzerare la sua velocità di movimento. \\ Fino alla fine della sua concentrazione, ogni proiettile generato fuori da una sfera di raggio 18 m e centro nel Mago e diretto verso l'interno di questa sfera, viene intercettato da dei \textit{Dardi Incantati} partiti dal Mago non appena entra nella sfera. \\ La CA di ogni creatura all'interno della sfera contro attacchi a distanza provenienti dall'esterno della sfera riceve un bonus pari al livello dello slot utilizzato, come il tiro salvezza contro proiettili ad area d'effetto circolare provenienti dall'esterno della sfera.
