Soglia di danno

--- a/data/Personaggi/Razze.tex
+++ b/data/Personaggi/Razze.tex
@@ -1,50 +1,71 @@
 \chapter{Razze}
 
-\section{Divorati}
+% \section{Divorati}
 
-\textit{Questa razza è un estratto dalla Biblioteca Omnicomprensiva di Ker}
+% \textit{Questa razza è un estratto dalla Biblioteca Omnicomprensiva di Ker}
 
-\DndDropCapLine{Q}{}uando un incantatore supera i propri limiti e si spinge oltre, può accadere che il suo corpo non riesca a reggere la pressione e per non morire si aggrappi alla forza della magia. In questi casi l'incantesimo che lo salva può diventare parte di lui, e il suo corpo può divenire un canale per la magia stessa. La forma fisica dell'incantatore cambia, e il suo corpo diventa simile all'incantesimo che lo ha divorato. L'incantesimo tuttavia non agisce solo sull'aspetto del divorato, ma ne influenza anche la mente, e può portare a cambiamenti di personalità che spesso sfociano in comportamenti altrimenti inspiegabili e in certi casi può condurre persino alla follia.
+% \DndDropCapLine{Q}{}uando un incantatore supera i propri limiti e si spinge oltre, può accadere che il suo corpo non riesca a reggere la pressione e per non morire si aggrappi alla forza della magia. In questi casi l'incantesimo che lo salva può diventare parte di lui, e il suo corpo può divenire un canale per la magia stessa. La forma fisica dell'incantatore cambia, e il suo corpo diventa simile all'incantesimo che lo ha divorato. L'incantesimo tuttavia non agisce solo sull'aspetto del divorato, ma ne influenza anche la mente, e può portare a cambiamenti di personalità che spesso sfociano in comportamenti altrimenti inspiegabili e in certi casi può condurre persino alla follia.
 
-\subsection{La trasformazione}
-Un incantatore di livello inferiore al 12° non è abbastanza potente da lanciare incantesimi che possano ridurlo allo stato di divorato. Il loro corpo mantiene alcuni tratti in comune con la loro forma precedente, ad esempio la statura, ma diventa più slanciato e i suoi lineamenti divengono più affilati. La sua pelle assume un colore simile a quello dell'incantesimo che lo ha divorato, e i suoi occhi diventano vacui e profondi, a riflettere la corruzione che lo ha colpito.
+% \subsection{La trasformazione}
+% Un incantatore di livello inferiore al 12° non è abbastanza potente da lanciare incantesimi che possano ridurlo allo stato di divorato. Il loro corpo mantiene alcuni tratti in comune con la loro forma precedente, ad esempio la statura, ma diventa più slanciato e i suoi lineamenti divengono più affilati. La sua pelle assume un colore simile a quello dell'incantesimo che lo ha divorato, e i suoi occhi diventano vacui e profondi, a riflettere la corruzione che lo ha colpito.
 
-\subsection{Una razza molto rara}
-Sono pochi gli incantatori abbastanza potenti e avventati da diventare un divorato, e ancor meno sono quelli che sopravvivono alla trasformazione. Per questo motivo i divorati sono una razza molto rara, e la maggior parte di loro non ha mai incontrato un altro membro della propria specie. I divorati sono solitari per natura, e preferiscono vivere in luoghi isolati dove possono essere se stessi senza dover temere di essere giudicati.
+% \subsection{Una razza molto rara}
+% Sono pochi gli incantatori abbastanza potenti e avventati da diventare un divorato, e ancor meno sono quelli che sopravvivono alla trasformazione. Per questo motivo i divorati sono una razza molto rara, e la maggior parte di loro non ha mai incontrato un altro membro della propria specie. I divorati sono solitari per natura, e preferiscono vivere in luoghi isolati dove possono essere se stessi senza dover temere di essere giudicati.
 
-\subsection{Un nuovo potere...}
-La potente magia che pervade il divorato gli dona un nuovo e maggiore potere. La longevità di un divorato aumenta drasticamente, e un divorato sufficientemente potente può vivere anche per più di mille anni. Secondo alcune leggende, nascosti in luoghi remoti, ci sono alcuni divorati che lo sono diventati ancora prima della caduta del Netheril.  Un divorato ha un forte legame con il tipo di magia che lo ha divorato. I tipi dei danni inferti dal dvorato, detti da energia elementale, dipendono da questo legame.
+% \subsection{Un nuovo potere...}
+% La potente magia che pervade il divorato gli dona un nuovo e maggiore potere. La longevità di un divorato aumenta drasticamente, e un divorato sufficientemente potente può vivere anche per più di mille anni. Secondo alcune leggende, nascosti in luoghi remoti, ci sono alcuni divorati che lo sono diventati ancora prima della caduta del Netheril.  Un divorato ha un forte legame con il tipo di magia che lo ha divorato. I tipi dei danni inferti dal dvorato, detti da energia elementale, dipendono da questo legame.
 
-\subsection{...Ma a quale prezzo}
-Un divorato è un essere molto potente nelle arti magiche, ma questo potere ha un costo in termini di energie: egli può lanciare incantesimi come un qualsiasi incantatore oppure attingere all'energia che lo tiene in vita per lanciare speciali incantesimi senza consumare slot, ma facendo questo si indebolisce. La grande longevità di un divorato non gli impedisce tuttavia di morire in battaglia o di esaurire l'energia che lo alimenta. 
+% \subsection{...Ma a quale prezzo}
+% Un divorato è un essere molto potente nelle arti magiche, ma questo potere ha un costo in termini di energie: egli può lanciare incantesimi come un qualsiasi incantatore oppure attingere all'energia che lo tiene in vita per lanciare speciali incantesimi senza consumare slot, ma facendo questo si indebolisce. La grande longevità di un divorato non gli impedisce tuttavia di morire in battaglia o di esaurire l'energia che lo alimenta. 
 
-\subsection{I nomi dei divorati}
-Un familiare che diviene un divorato è percepito tra molte razze come un grande
-disonore, per questo spesso i divorati si allontanano da chi era loro caro. Per evitare che il disonore cada anche sui loro familiari, molti divorati decidono di cambiare il proprio nome. Alcuni di loro scelgono un nome che rifletta la loro nuova natura, altri invece scelgono un nome che li aiuti a dimenticare il loro passato. Altri ancora preferiscono invece mantenere il proprio nome, o sceglierne uno simile, per ricordare chi erano e da dove vengono.
+% \subsection{I nomi dei divorati}
+% Un familiare che diviene un divorato è percepito tra molte razze come un grande
+% disonore, per questo spesso i divorati si allontanano da chi era loro caro. Per evitare che il disonore cada anche sui loro familiari, molti divorati decidono di cambiare il proprio nome. Alcuni di loro scelgono un nome che rifletta la loro nuova natura, altri invece scelgono un nome che li aiuti a dimenticare il loro passato. Altri ancora preferiscono invece mantenere il proprio nome, o sceglierne uno simile, per ricordare chi erano e da dove vengono.
 
-\subsection{Tratti dei divorati}
-Venire divorato dalla magia è una vera e propria trascensione. Un divorato durante la trasformazione perde i suoi tratti razziali, ma acquisisce i seguenti.
-\paragraph{Vista cieca} Il divorato non può vedere come prima, ma ha un'altissima percezione della magia che lo circonda, il che gli consente di percepire l'ambiente circostante anche senza l'uso della vista.
-\paragraph{Nutrimento magico} Un divorato non si nutre come un normale essere vivente, ma attinge energia magica dall'ambiente circostante. Un divorato non ha bisogno di mangiare, bere o respirare. Il suo sonno è diverso da quello dei normali esseri viventi: il divorato entra in uno stato di trance in cui è semicosciente ed entra in contatto con la forza che lo ha divorato, attingendo alla magia per recuperare tutte le energie di cui ha bisogno. 4 ore di trance sono sufficienti per un divorato a effettuare un riposo lungo. Se un divorato rimane circa una settimana nel raggio di 1,5 m di un oggetto magico che non sia esplicitamente progettato per resistervi, esso perde permanentemente le sue proprietà magiche.
-\paragraph{Linguaggi} Il divorato mantiene la conoscenza delle lingue che aveva appreso prima di trasformarsi. Potrebbe accadere che, durante la trasformazione, un divorato perda la capacità di comprendere il comune.
-\paragraph{Velocità} La velocità base sul terreno di un divorato è di 9 metri.
-\paragraph{Difesa senza armatura} Un divorato non può indossare armature, ma la sua CA è pari a 10 + il suo modificatore di Intelligenza.
-\paragraph{Incremento del Punteggi di Caratteristica} Un punteggio a scelta tra Saggezza, Intelligenza e Carisma di un divorato aumenta di 2, fino a un massimo di 20. Un divorato perde eventuali incrementi dei punteggi di caratteristica dovuti alla sua razza prima della trasformazione.
+% \subsection{Tratti dei divorati}
+% Venire divorato dalla magia è una vera e propria trascensione. Un divorato durante la trasformazione perde i suoi tratti razziali, ma acquisisce i seguenti.
+% \paragraph{Vista cieca} Il divorato non può vedere come prima, ma ha un'altissima percezione della magia che lo circonda, il che gli consente di percepire l'ambiente circostante anche senza l'uso della vista.
+% \paragraph{Nutrimento magico} Un divorato non si nutre come un normale essere vivente, ma attinge energia magica dall'ambiente circostante. Un divorato non ha bisogno di mangiare, bere o respirare. Il suo sonno è diverso da quello dei normali esseri viventi: il divorato entra in uno stato di trance in cui è semicosciente ed entra in contatto con la forza che lo ha divorato, attingendo alla magia per recuperare tutte le energie di cui ha bisogno. 4 ore di trance sono sufficienti per un divorato a effettuare un riposo lungo. Se un divorato rimane circa una settimana nel raggio di 1,5 m di un oggetto magico che non sia esplicitamente progettato per resistervi, esso perde permanentemente le sue proprietà magiche.
+% \paragraph{Linguaggi} Il divorato mantiene la conoscenza delle lingue che aveva appreso prima di trasformarsi. Potrebbe accadere che, durante la trasformazione, un divorato perda la capacità di comprendere il comune.
+% \paragraph{Velocità} La velocità base sul terreno di un divorato è di 9 metri.
+% \paragraph{Difesa senza armatura} Un divorato non può indossare armature, ma la sua CA è pari a 10 + il suo modificatore di Intelligenza.
+% \paragraph{Incremento del Punteggi di Caratteristica} Un punteggio a scelta tra Saggezza, Intelligenza e Carisma di un divorato aumenta di 2, fino a un massimo di 20. Un divorato perde eventuali incrementi dei punteggi di caratteristica dovuti alla sua razza prima della trasformazione.
 
-\subsection{Divorati elementali}
-Essi costituiscono la maggior parte dei divorati: quando un incantatore attinge all'energia elementale e diviene un divorato, il suo corpo diventa una manifestazione dell'elemento stesso Manifesta quindi una forte connessione con l'elemento di cui ora il suo corpo è fatto. Un divorato dell'acqua, ad esempio, potrebbe avere la pelle blu e gli occhi azzurri, mentre un divorato del fuoco potrebbe avere la pelle rossa e gli occhi gialli.
-\paragraph{Resistenza elementale} Un divorato elementale ha resistenza a un tipo di danno a scelta tra acido, freddo, fulmine, fuoco e tuono, che dipende dall'elemento cui è legato.
-\paragraph{Timore reverenziale} Un divorato elementale ha competenza nei tiri per intimidire.
-\paragraph{Velocità} La velocità base sul terreno di un divorato è di 7,5 metri.
-\paragraph{Affinità elementale}Un divorato elementale conosce l'incantesimo \textit{Scarica Elementale} e, un numero di volte pari al suo bonus di competenza per riposo lungo, può lanciarlo senza consumare slot. Il tipo di danni inferti dall'incantesimo dipende dall'elemento del divorato. Quando lo fa, subisce 2d4+2 danni puri.
-\paragraph{Morte violenta} Se un divorato muore per il contraccolpo di un proprio incantesimo, il suo corpo si dissolve nell'ambiente circostante, mentre se muore per altri motivi, il suo corpo esplode in una nube di energia elementale. In questo caso tutti coloro che si trovano entro 6 metri dal divorato devono effettuare un tiro salvezza su Destrezza. Se lo falliscono, subiscono 8d6 danni da energia elementale, mentre se lo superano, subiscono soltanto la metà di quei danni.
+% \subsection{Divorati elementali}
+% Essi costituiscono la maggior parte dei divorati: quando un incantatore attinge all'energia elementale e diviene un divorato, il suo corpo diventa una manifestazione dell'elemento stesso Manifesta quindi una forte connessione con l'elemento di cui ora il suo corpo è fatto. Un divorato dell'acqua, ad esempio, potrebbe avere la pelle blu e gli occhi azzurri, mentre un divorato del fuoco potrebbe avere la pelle rossa e gli occhi gialli.
+% \paragraph{Resistenza elementale} Un divorato elementale ha resistenza a un tipo di danno a scelta tra acido, freddo, fulmine, fuoco e tuono, che dipende dall'elemento cui è legato.
+% \paragraph{Timore reverenziale} Un divorato elementale ha competenza nei tiri per intimidire.
+% \paragraph{Velocità} La velocità base sul terreno di un divorato è di 7,5 metri.
+% \paragraph{Affinità elementale}Un divorato elementale conosce l'incantesimo \textit{Scarica Elementale} e, un numero di volte pari al suo bonus di competenza per riposo lungo, può lanciarlo senza consumare slot. Il tipo di danni inferti dall'incantesimo dipende dall'elemento del divorato. Quando lo fa, subisce 2d4+2 danni puri.
+% \paragraph{Morte violenta} Se un divorato muore per il contraccolpo di un proprio incantesimo, il suo corpo si dissolve nell'ambiente circostante, mentre se muore per altri motivi, il suo corpo esplode in una nube di energia elementale. In questo caso tutti coloro che si trovano entro 6 metri dal divorato devono effettuare un tiro salvezza su Destrezza. Se lo falliscono, subiscono 8d6 danni da energia elementale, mentre se lo superano, subiscono soltanto la metà di quei danni.
 
-\subsection{Divorati del Caos}
-Secondo antiche leggende, esisteva un altro tipo di magia, oggi quasi completamente andato perduto: la Magia del Caos. Solo pochi incantatori di straordinario potere erano in grado di padroneggiarla, e ancor meno erano abbastanza avventati da utilizzarla. La Magia del Caos era estremamente potente, ma anche molto pericolosa, e spesso gli incantatori che la utilizzavano perdevano il controllo e venivano divorati da essa. Molte persone credono che i Divorati del Caos, come la magia che li alimenta, siano solo un mito diffuso per spaventare i bambini. L'aspetto di un divorato del Caos è ingrado di incutere timore anche nei più coraggiosi: la sua pelle è del colore del vuoto più profondo e i suoi occhi brillano di una luce violastra.
-\paragraph{Resistenza magica} Un divorato del Caos ha resistenza ai danni da contundenti, perforanti, da taglio provocati da armi magiche e da forza.
-\paragraph{Velocità} La velocità base sul terreno di un divorato è di 10,5 metri.
-\paragraph{Aspetto del Caos} Un divorato del Caos ha maestria nei tiri per intimidire.
-\paragraph{Tutt'uno con la magia} Un divorato del Caos ha maestria nei tiri su arcano.
-\paragraph{Incantesimi del Caos}Un divorato del Caos conosce l'incantesimo \textit{Punizione del Caos} e, un numero di volte pari al suo bonus di competenza, può lanciarlo senza consumare slot. Quando lo fa, subisce 3d4+2 danni puri. Inoltre un divorato del caos conosce il trucchetto \textit{Deflagrazione Occulta}, ma ogni volta che lo lancia subisce 1 danno puro.
-\paragraph{Buco Nero} Quando un divorato del caos muore, genera una scarica di energia caotica che apre un portale verso il Piano Astrale nel punto in cui si trova. Qualsiasi creatura entro 3 metri dal portale viene risucchiata al suo interno e ricompare in un posto a caso sul Piano Astrale, poi il portale si richiude. Il portale è a senso unico e non può essere riaperto.
+% \subsection{Divorati del Caos}
+% Secondo antiche leggende, esisteva un altro tipo di magia, oggi quasi completamente andato perduto: la Magia del Caos. Solo pochi incantatori di straordinario potere erano in grado di padroneggiarla, e ancor meno erano abbastanza avventati da utilizzarla. La Magia del Caos era estremamente potente, ma anche molto pericolosa, e spesso gli incantatori che la utilizzavano perdevano il controllo e venivano divorati da essa. Molte persone credono che i Divorati del Caos, come la magia che li alimenta, siano solo un mito diffuso per spaventare i bambini. L'aspetto di un divorato del Caos è ingrado di incutere timore anche nei più coraggiosi: la sua pelle è del colore del vuoto più profondo e i suoi occhi brillano di una luce violastra.
+% \paragraph{Resistenza magica} Un divorato del Caos ha resistenza ai danni da contundenti, perforanti, da taglio provocati da armi magiche e da forza.
+% \paragraph{Velocità} La velocità base sul terreno di un divorato è di 10,5 metri.
+% \paragraph{Aspetto del Caos} Un divorato del Caos ha maestria nei tiri per intimidire.
+% \paragraph{Tutt'uno con la magia} Un divorato del Caos ha maestria nei tiri su arcano.
+% \paragraph{Incantesimi del Caos}Un divorato del Caos conosce l'incantesimo \textit{Punizione del Caos} e, un numero di volte pari al suo bonus di competenza, può lanciarlo senza consumare slot. Quando lo fa, subisce 3d4+2 danni puri. Inoltre un divorato del caos conosce il trucchetto \textit{Deflagrazione Occulta}, ma ogni volta che lo lancia subisce 1 danno puro.
+% \paragraph{Buco Nero} Quando un divorato del caos muore, genera una scarica di energia caotica che apre un portale verso il Piano Astrale nel punto in cui si trova. Qualsiasi creatura entro 3 metri dal portale viene risucchiata al suo interno e ricompare in un posto a caso sul Piano Astrale, poi il portale si richiude. Il portale è a senso unico e non può essere riaperto.
 
+\section{Forgiati}
+
+\DndDropCapLine{N}{}on c'è un'ambientazione fantasy che sia completa senza una vasta selezione di amiconi artificiali, del resto chi può dire di aver visto Guerre Stellari senza essersi innamorato di C3PO o di R2D2? Evidentemente poche persone, dato che internet è assolutamente pieno di varie versioni dei Forgiati. \\ Mancando tuttavia una versione ufficiale nei manuali di base di quinta edizione o in Tasha e Xanathar, ho deciso di sopperire con la mia versione, a voi!
+
+\subsection{Tratti dei forgiati}
+\paragraph{Aumento del punteggio di caratteristica} Il punteggio di Costituzione di un forgiato aumenta di 2.
+\paragraph{Difesa senza Armatura} Un forgiato non può indossare armature, ma la sua CA è pari a 8 + il suo modificatore di Destrezza + il suo bonus di competenza.
+\paragraph{Velocità} La velocità base sul terreno di un forgiato è di 9 metri.
+\paragraph{Resistenza al Veleno} Un forgiato ha resistenza ai danni da veleno e ai tiri salvezza contro il veleno.
+\paragraph{Radar} Un forgiato possiede scurovisione nel raggio di 18 m.
+
+\subsection{Forgiati da combattimento}
+\paragraph{Aumento del punteggio di caratteristica} Il punteggio di Destrezza di un forgiato da combattimento aumenta di 1.
+
+\subsection{Forgiati da esplorazione}
+\paragraph{Aumento del punteggio di caratteristica} Il punteggio di Intelligenza di un forgiato da esplorazione aumenta di 1.
+\paragraph{Scanner magico} Un forgiato da esplorazione conosce l'incantesimo \textit{Individuazione del Magico} e può lanciarlo un numero di volte pari al suo bonus di competenza senza usare slot per ogni riposo lungo.
+\paragraph{Velocità} La velocità base sul terreno di un forgiato da esplorazione è di 10,5 metri.
+
+\subsection{Forgiati da costruzione}
+\paragraph{Aumento del punteggio di caratteristica} Il punteggio di Forza di un forgiato da costruzione aumenta di 1.
