--- a/data/Personaggi/Barbaro.tex
+++ b/data/Personaggi/Barbaro.tex
@@ -1,3 +1,7 @@
 \chapter{Barbaro}
 
 \section{Privilegi di Classe Opzionali}
+
+\subsection{Difesa senza armatura e soglia di danno}
+\paragraph{Classe armatura}La CA di un Barbaro che non indossa armature è pari a 10 + il suo modificatore di Destrezza + un quarto del suo livello da Barbaro. 
+\paragraph{Soglia di danno}La soglia di danno di un Barbaro che non indossa armature è pari a metà del suo livello da Barbaro + il suo modificatore di Costituzione + il suo bonus di competenza, il tutto diviso per due.
